# late-sh

./: .mise.toml  CONTEXT.md  Cargo.toml  Dockerfile  docker-compose.monitoring.yml  docker-compose.yml  flake.nix  typos.toml
.github/: dependabot.yml  renovate.json  zizmor.yml
.github/workflows/: build.yml  ci.yml  deploy.yml  deploy_cli.yml  deploy_web.yml  pr.yml  terraform.yml
infra/: cloudnativepg.tf  liquidsoap.tf  main.tf  monitoring.tf
late-cli/: Cargo.toml
late-cli/src/: audio.rs  cli.rs  config.rs  identity.rs  legacy.rs  logging.rs  main.rs  pair.rs  supervisor.rs  ws.rs
late-cli/src/audio/: analyzer.rs  decoder.rs  decoder_thread.rs  mod.rs  output.rs
late-cli/src/ssh/: banner.rs  io.rs  mod.rs  pty.rs
late-core/: Cargo.toml
late-ssh/: Cargo.toml
late-ssh/src/app/: input.rs
late-ssh/src/app/chat/: state.rs  ui.rs
late-ssh/src/app/settings_modal/: input.rs
late-ssh/tests/: app_input_flow.rs
late-ssh/tests/helpers/: mod.rs
late-web/: Cargo.toml  package-lock.json  package.json
monitoring/dashboards/: observability.json
