[workspace]
members = [
    "late-cli",
    "late-core",
    "late-ssh",
    "late-web",
]
resolver = "2"

[workspace.package]
rust-version = "1.85.0"

[workspace.dependencies]
# Core Utils
anyhow = "1.0.102"
chrono = { version = "0.4.44", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
uuid = { version = "1.23.1", features = ["serde", "v7"] }

# Async / Runtime
tokio = { version = "1.52.0", features = ["full"] }
tokio-util = "0.7.18"

# Logging / Tracing
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

# Web / HTTP
axum = "0.8.9"
reqwest = "0.13.2"
tower-http = "0.6.8"

# Database
tokio-postgres = { version = "0.7.17", features = ["with-serde_json-1", "with-uuid-1", "with-chrono-0_4"] }

# Telemetry
opentelemetry = "0.31.0"
opentelemetry_sdk = "0.31.0"
opentelemetry-otlp = "0.31.1"
opentelemetry-http = "0.31.0"
tracing-opentelemetry = "0.32.1"
opentelemetry-appender-tracing = "0.31.1"
askama = "0.15.6"
async-stream = "0.3.6"
base64 = "0.22.1"
bytes = "1"
cpal = "0.17.3"
crossterm = "0.29"
deadpool-postgres = "0.14.1"
emojis = "0.8.1"
futures-util = "0.3.32"
image = "0.25.10"
ipnet = "2.12"
late-core = { path = "late-core", default-features = false }
nix = "0.31.2"
qrcodegen = "1.8.0"
rand_core = "0.10.1"
ratatui = "0.30.0"
rstest = "0.26.1"
rumenx-sudoku = "1.0.0"
russh = "0.60.0"
rustfft = "6.4.1"
shlex = "1.3.0"
symphonia = "0.5.5"
testcontainers = "0.27.3"
tokio-tungstenite = "0.29"
tower = "0.5.3"
vte = "0.15"

[profile.release]
# Strip debug info but keep symbols for readable panic stack traces
strip = "debuginfo"

# Use Thin LTO for a balance of compilation speed and runtime performance
lto = "thin"
