[package]
name = "late-cli"
version = "0.1.0"
edition = "2024"

[features]
default = []
otel = []

[[bin]]
name = "late"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { version = "4", features = ["derive", "env"] }
clap-verbosity-flag = { version = "3", features = ["tracing"] }
cpal = "0.16"
crossterm = "0.29"
dirs = "5"
url = "2"
futures-util = "0.3"
libc = "0.2"
reqwest = { workspace = true, features = ["blocking"] }
russh = "0.56"
rustfft = "6.4.1"
symphonia = { version = "0.5.5", features = ["mp3"] }
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-native-roots"] }
